--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Dearmyhealth"
         tools:targetApi="31">
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".modules.login.ui.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
