FEAT: Diet 데이터 수기 생성 화면 구현
# 1. DietCreateActivity
  해당 화면을 팝업으로 구현하면 TimePickerDialog와 겹쳐
  두 화면 모두 유지할 수 없게 된다.
  이는 TimePicker 또한 Dialog를 상속받고, Dialog는 하나만 화면에 존재할 수 있기 때문.
  따라서 Activity로 구현하게 되었다.

  ## 1-1. 음식 검색
    view_food_search.xml를 정의하여 AlertDialog로 검색 창을 구현.
    foodRepository를 통해 음식 이름을 포함한 code 상위 20개를 검색한다.
    그 중 하나를 click할 시 식단에 해당 음식의 영양성분이 적용.
  ## 1-2. DietPreview
    정보를 수정할 때마다 미리보기 화면을 제공한다.
    viewModel이 저장하는 값을 observe 하여 값을 갱신한다.
  ## 1-3. Editing Panel
    Diet의 유형, 이름, 날짜와 시간을 수정하도록 입력을 추가함.
    - Diet의 유형
      Diet.MealType에 정의된 순서대로 목록을 생성하여 선택하며, 해당 인덱스 값을 전달해 viewModel이 설정한다.
      ArrayAdapter 사용을 위해 view_single_text.xml 생성.
    - Diet의 이름
      Food 검색 및 지정 시 해당 식품명으로 자동 설정되며,
      사용자가 이름을 지정하면 해당 이름을 계속 유지한다.
    - 날짜와 시간
      DatePicker와 TimePicker를 사용해 구현.

# 2. DietCreateViewModel
  Factory를 통해 application을 전달 받고 이를 통하여 database와 dao를 생성해 사용한다.
  이는 db와 dao, repository가 싱글톤 객체여야 하기 때문인데,
  application이 아닌 activity의 context를 받으면 Diet를 추가할 때마다 새로운 context에 db를 할당하기 때문에 낭비가 있다고 한다.

  ## 2-1 Food Search
    이름에 키워드를 포함하는 데이터 중 code 오름차순 20개를 검색한다.
    TODO - 20개는 FoodDAO에 query로 정의되어 있어 추후 수정이 필요하다.
    검색 결과는 FoodSearchResult에 저장되며 LiveData로 Activity에 전달한다.
  ## 2-2 Diet configuration
    사용자가 식단에 대해 입력하는 정보를 각각 다루어 저장하고 save할 때 Repository에 전달하여 db에 저장한다.

    Diet의 이름의 사용자 지정 여부를 저장하여 음식 검색 후의 이름 변경을 결정한다.

# 3. DialogListAdapter
  데이터 item 타입을 Food로 수정하여 단순화 시킴.

# 4. Nutrients
  Food DB의 column이 너무 많아 프로젝트에 필수적인 영양소만 우선 정의하여 제한했음.
  각 영양소의 한글 표기를 Enum 클래스에 함께 정의함.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".modules.Diet.activity.DietCreateActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Dearmyhealth"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
