Feat: 약물 검색, 복약 일정 등록 및 수정 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             android:exported="false"
             android:theme="@style/Theme.Dearmyhealth"
             android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".modules.Dosage.activity.DosageActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Dearmyhealth"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
